feat(config): using tailwind config in apps and packages workspace

--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -11,6 +11,8 @@
     "next-env.d.ts",
     "next.config.js",
     "**/*.ts",
+    "**/*.cjs",
+    "**/*.mjs",
     "**/*.tsx",
     ".next/types/**/*.ts"
   ],
