--- a/apps/docs/tsconfig.json
+++ b/apps/docs/tsconfig.json
@@ -10,6 +10,8 @@
   "include": [
     "next-env.d.ts",
     "next.config.js",
+    "**/*.cjs",
+    "**/*.mjs",
     "**/*.ts",
     "**/*.tsx",
     ".next/types/**/*.ts"
